--- a/app/views/pages/_small_pack.html.erb
+++ b/app/views/pages/_small_pack.html.erb
@@ -1,47 +1,20 @@
 <h2 class="sec-head" id="sc-grp7">
-  <span>少量パック特集</span>
+  <span>リスト</span>
 </h2>
 <p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
-<div class="specialSec">
-  <div class="item item_bigger option-premium">
-    <div class="inner">
-      <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/012007/farmers/2187/?l-id=top-small-main_carrot_nakamura">
-        <div class="item-separate-1">
-          <div class="cropsImg">
-            <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/012/007_1242x702.jpg" alt="農薬不使用で育てる、こだわりの「西洋ニンジン」">
-          </div>
-          <div class="item-labels">
-            <span class="item-labels-02">NEW</span>
-            <span class="item-labels-01">オーガニック</span>
-          </div>
-        </div>
-        <div class="item-separate-2">
-          <div class="datahead">
-            <div class="imgWrap">
-              <img src="https://image.space.rakuten.co.jp/d/strg/ctrl/32/9d49014580fcba1baa0781792fc9120b506a3fc5.11.2.32.2.jpg" alt="中村 友哉">
-            </div>
-            <div class="datahead-text">
-              <span class="datahead-text-main">中村 友哉
-                <span class="honorific">さん</span>
-              </span>
-              <br>
-              <span class="datahead-text-sub">愛媛県 テレファーム</span>
-            </div>
-          </div>
-          <div class="tags">
-            <span>11月頃お届け</span>
-          </div>
-          <div class="dataMain">
-            <h3 class="dataMain-head">農薬不使用で育てる、こだわりの「西洋ニンジン」</h3>
-            <p class="dataMain-disc">くさみが少なく、甘みが強い西洋ニンジン。農薬、化学肥料を一切使わず安心安全に丹精込めて栽培します。</p>
-          </div>
-          <div class="dataSub">
-            1,500<span class="unit">円</span><span class="attn">(税込・送料込)</span>/4袋前後</div>
-        </div>
-      </a>
-      <div class="optionLink">
-        <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/012007/farmers/2182/?l-id=top-small-option_carrot_nakamura">通常：2,700円/8袋前後はこちら＞</a>
-      </div>
-    </div>
-  </div>
+<%= render "pages/small_pack_list" %>
+<hr>
+<h2 class="sec-head" id="sc-grp7">
+  <span>人気</span>
+</h2>
+<p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
+<%= render "pages/small_pack_favorite" %>
+<hr>
+<h2 class="sec-head" id="sc-grp7">
+  <span>最新</span>
+</h2>
+<p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
+<%= render "pages/small_pack_new" %>
+<div class="top-c-singleBtn">
+  <a href="#" class="button button-main">今すぐサインアップ!</a>
 </div>
