--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render "layouts/header" %>
-    <%= yield %>
+    <div><%= yield %></div>
     <%= render "layouts/footer" %>
   </body>
 </html>
