--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
           ィ活動を支援しています。</p>
         <p><i class="fa fa-map-pin"></i>1 Đại Cồ Việt, Lê Đại Hành, Hà Nội</p>
         <p><i class="fa fa-phone"></i> Phone (VN) :  +84-4-3795-5417 </p>
-        <p><i class="fa fa-envelope"></i> E-mail : info@anbu.com</p>
+        <p><i class="fa fa-envelope"></i> E-mail : info@kamisama.com</p>
       </div>
       <div class="col-md-2 col-sm-6 paddingtop-bottom">
         <h6 class="heading7">LINKS</h6>
