--- a/app/views/pages/_small_pack_list.html.erb
+++ b/app/views/pages/_small_pack_list.html.erb
@@ -3,7 +3,7 @@
     <li>
       <a href="https://agriculture.rakuten.co.jp/farm/app/contractField/crops/?l-id=top-listmenu_crops">
         <div class="imgWrap">
-          <img src="/top/img/crops_icon.png" alt="作物リストをみる">
+          <%= image_tag("crops_icon") %>
         </div>
         <div class="txtWrap">
           作物リストをみる
@@ -13,7 +13,7 @@
     <li>
       <a href="https://agriculture.rakuten.co.jp/farm/connect/farmers?l-id=top-listmenu_farmersList">
         <div class="imgWrap">
-          <img src="/top/img/farmers_icon.png" alt="農家さんリストをみる">
+          <%= image_tag("farmers_icon") %>
         </div>
         <div class="txtWrap">
           農家さんリストを<wbr>みる
@@ -23,7 +23,7 @@
     <li>
       <a href="/calendar/?l-id=top-listmenu_calendar">
         <div class="imgWrap">
-          <img src="/top/img/calendar_icon.png" alt="栽培スケジュールをみる">
+          <%= image_tag("calendar_icon") %>
         </div>
         <div class="txtWrap">
           栽培スケジュールを<wbr>みる
