--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,30 @@
-<%= render "pages/top" %>
-<%= render "pages/small_pack" %>
+<% provide :title, t("pages.home") %>
+<% if user_signed_in? %>
+  <div class="container">
+    <div class="col-md-4 show-list-groups">
+      <div class="user-user_picture-small">
+        <%= link_to image_tag("profile.jpg"), "#" %>
+        <%= link_to current_user.name, "#" %>
+      </div>
+      <h3><%= t "groups" %></h3>
+      <div class="list-groups"></div>
+    </div>
+    <div class="col-md-8 show-follow-images">
+      <div class="new-image">
+        <div class="description-field user-user_picture-small">
+          <%= link_to image_tag("profile.jpg"), "#" %>
+          <%= text_area :description, class: "form-control image-description" %>
+        </div>
+        <div class="image-file">
+          <%= file_field :image, class: "image-file" %>
+        </div>
+        <div class="actions">
+          <%= submit_tag t("upload-review"), class: "btn btn-primary" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% else %>
+	<%= render "pages/top" %>
+	<%= render "pages/small_pack" %>
+<% end %>
