--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
           <div class="media-vertical media-thumb">
               <figure class="media-object">
                 <div class="image-name"><%= image_name = product.image %></div>
-                <%= image_tag(image_name)%>
+                <%= link_to image_tag(image_name), product_path(product) %>
                 <figcaption class="media-caption"><b><%= product.name %></b>
                 </figcaption>
               </figure>
