--- a/app/views/pages/_top.html.erb
+++ b/app/views/pages/_top.html.erb
@@ -31,16 +31,36 @@
   <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/1)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/2)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/3)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/4)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/5)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/6)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/7)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/8)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/9)"></div>
-      <div class="swiper-slide" style="background-image:url(http://lorempixel.com/600/600/nature/10)"></div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/1.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/2.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/3.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/4.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/5.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/6.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/7.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/8.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/9.jpg") %>
+      </div>
+      <div class="swiper-slide top-image">
+        <%= image_tag("tops/10.jpg") %>
+      </div>
     </div>
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
