--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -227,7 +227,7 @@ p {
     font-weight: bold;
 
     &:hover {
-      color: $white !important;
+      color: $white;
 
     }
   }
@@ -297,14 +297,13 @@ p {
 
 .signup {
   background-image: url('background.jpg');
-  margin-top: -10px;
   text-align: center;
   width: 100%;
   background-size: 100% 100%;
   height: 100vh;
 
   .mainbox {
-    margin-top: 40px;
+    margin-top: 100px !important;
 
   }
 }
@@ -318,19 +317,17 @@ p {
   height: 100vh;
 
   .mainbox {
-    margin-top: 40px;
+    margin-top: 100px !important;
 
   }
 
   .input-group {
     margin-bottom: 10px;
     margin-top: 10px;
-
   }
 
   .checkbox {
-    margin-left: 20px;
-
+    margin-left: 20px !important;
   }
 }
 
@@ -343,4 +340,22 @@ p {
     width: 40px;
 
   }
+}
+
+.signup-button {
+  margin-left: 75px;
+}
+
+.btn-info {
+  background-color: $mediumblue1 !important;
+  margin-bottom: 5px;
+  margin-right: 50px;
+  margin-top: 5px;
+  padding-bottom: 9px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 9px;
+}
+.top-image {
+  height: 170px !important;
 }
