--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,21 +13,21 @@
           <%= devise_error_messages! %>
 
           <div class="form-group">
-            <%= f.label :name, t("signup.name"), class: "col-md-2 control-label" %>
+            <%= f.label :name, t("signup.name"), class: "col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.text_field :name, autofocus: true, class: "form-control",
                 placeholder: t("signup.name") %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :email, t("signup.email") ,class: "col-md-2 control-label" %>
+            <%= f.label :email, t("signup.email") ,class: "col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.email_field :email, autofocus: true, class: "form-control",
                 placeholder: t("signup.email") %>
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :password, t("signup.password") ,class: "col-md-2 control-label", id: "pw-field" %>
+            <%= f.label :password, t("signup.password") ,class: "col-md-3 control-label pass-text", id: "pw-field" %>
             <div class="col-md-9">
               <% if @minimum_password_length %>
                 <em class="small">
@@ -40,17 +40,17 @@
             </div>
           </div>
           <div class="form-group">
-            <%= f.label :password_confirmation, t("signup.confirmation") ,class: "col-md-2 control-label" %>
+            <%= f.label :password_confirmation, t("signup.confirmation") ,class: "col-md-3 control-label" %>
             <div class="col-md-9">
               <%= f.password_field :password_confirmation, autocomplete: "off",
                 class: "form-control", placeholder: t("signup.password-confirmation") %>
             </div>
           </div>
           <div class="form-group">
-            <div class="signup-button col-md-6">
+            <div class="col-md-6">
               <%= f.submit t("sign-up"), class: "btn btn-info col-md-offset-9" %>
             </div>
-            <div class="cancel-button col-md-offset-6">
+            <div class="col-md-offset-6">
               <%= link_to t("cancel"), cancel_user_registration_path, class: "btn btn-danger" %>
             </div>
           </div>
