--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
       "data-turbolinks-track": "reload" %>
     <%= javascript_include_tag "application",
       "data-turbolinks-track": "reload" %>
+    <%= favicon_link_tag asset_path("icon.png"), :rel => "icon", :type =>  "image/png" %>
   </head>
 
   <body>
