--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title><%= full_title yield :title %></title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag "application", media: "all",
       "data-turbolinks-track": "reload" %>
@@ -12,7 +14,7 @@
 
   <body>
     <%= render "layouts/header" %>
-    <div><%= yield %></div>
+    <div style="margin-top: 50px"><%= yield %></div>
     <%= render "layouts/footer" %>
   </body>
 </html>
