--- a/app/views/pages/_small_pack.html.erb
+++ b/app/views/pages/_small_pack.html.erb
@@ -1,5 +1,5 @@
 <h2 class="sec-head" id="sc-grp7">
-  <span>リスト</span>
+  <span>一覧</span>
 </h2>
 <p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
 <%= render "pages/small_pack_list" %>
