--- a/app/views/pages/_small_pack_list.html.erb
+++ b/app/views/pages/_small_pack_list.html.erb
@@ -6,27 +6,27 @@
           <%= link_to image_tag("crops_icon"), products_path(@products) %>
         </div>
         <div class="txtWrap list-name">
-          <b>作物リストをみる</b>
+          <b>農産物一覧を見る</b>
         </div>
       </a>
-    </li>
+    </li>s
     <li>
       <a href="#">
         <div class="imgWrap">
           <%= link_to image_tag("farmers_icon"), users_path(@users) %>
         </div>
         <div class="txtWrap list-name">
-          <b>農家さんリストをみる</b>
+          <b>農家さん一覧を見る</b>
         </div>
       </a>
     </li>
     <li>
       <a href="#">
         <div class="imgWrap">
-          <%= link_to image_tag("calendar_icon"), users_path(@users) %>
+          <%= link_to image_tag("post_icon"), posts_path(@posts) %>
         </div>
         <div class="txtWrap list-name">
-          <b>培スケジュールををみる</b>
+          <b>投稿一覧を見る</b>
         </div>
       </a>
     </li>
