--- a/app/views/pages/_small_pack_new.html.erb
+++ b/app/views/pages/_small_pack_new.html.erb
@@ -8,7 +8,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/003/002_1242x702.jpg" alt="野菜炒めや中華料理に「広東ハクサイ(パクチョイ)」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">NEW</span>
+            <span class="item-labels-02">最新</span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -48,7 +48,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/022/001_1242x702.jpg" alt="農薬、化学肥料不使用で育てる「ブロッコリー」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">NEW</span>
+            <span class="item-labels-02">最新</span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -88,7 +88,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/012/002_1242x702.jpg" alt="皮ごと生でポリポリ甘い「ミニニンジン」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">NEW</span>
+            <span class="item-labels-02">最新</span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -130,7 +130,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/022/002_1242x702.jpg" alt="ブロッコリー界の王子「スティックセニョール」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">NEW</span>
+            <span class="item-labels-02">最新</span>
           </div>
         </div>
         <div class="item-separate-2">
