--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%= render "pages/top" %>
 <h2 class="sec-head" id="sc-grp7">
-  <span>農家さんリスト</span>
+  <span>農家さん一覧</span>
 </h2>
 <p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
 <div class="area-contents section js-tab-content tab-content" id="cropstab">
