--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,8 @@
     <div class="row">
       <div class="col-md-4 col-sm-6 footerleft ">
         <div class="logofooter">神様 チーム</div>
-        <p>ベトナム理工系トップクラスのハノイ工科大学をはじめ、ハノイ国家大学、ダナン工科大学にて
-          選抜した学生たちにRubyの寄附講座を実施中。ベトナムのRubyエンジニアコミュニテ
-          ィ活動を支援しています。</p>
+        <p>ベトナム理工系トップクラスのハノイ工科大学と、日本の芝浦工業大学の学生チーム。
+        問題解決学習の一環として、webアプリケーション「favs」の開発を行っています。</p>
         <p><i class="fa fa-map-pin"></i>1 Đại Cồ Việt, Lê Đại Hành, Hà Nội</p>
         <p><i class="fa fa-phone"></i> Phone (VN) :  +84-4-3795-5417 </p>
         <p><i class="fa fa-envelope"></i> E-mail : info@kamisama.com</p>
