--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 <h2 class="sec-head" id="sc-grp7">
   <span>投稿一覧</span>
 </h2>
-<p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
+<p class="sec-disc">最新の記事をチェックしましょう。</p>
 <div class="top-c-articleList">
   <div class="inner">
     <ul class="articlelist-list">
