--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 <h2 class="sec-head" id="sc-grp7">
   <span>農家さん一覧</span>
 </h2>
-<p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
+<p class="sec-disc">ここでは、農家さんの情報を確認できます。</p>
 <div class="area-contents section js-tab-content tab-content" id="cropstab">
   <ul class="row3 media-list crops-list">
     <% @farmers.each do |farmer| %>
