--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 <h2 class="sec-head" id="sc-grp7">
   <span>農産物一覧</span>
 </h2>
-<p class="sec-disc">お求めやすい少量パック。1人暮らしの方にも最適。</p>
+<p class="sec-disc">農産物の栄養素や、料理のメニュー、保存方法などの情報を確認できます。</p>
 <div class="area-contents section js-tab-content tab-content" id="cropstab">
   <ul class="row3 media-list crops-list">
     <% @products.each do |product| %>
