--- a/app/views/pages/_small_pack_favorite.html.erb
+++ b/app/views/pages/_small_pack_favorite.html.erb
@@ -8,7 +8,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/020/002_1242x702.jpg" alt="クリーミーな甘さが癖になる「安納芋」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-03">人気</span>
+            <span class="item-labels-03"><%= t "main.fav" %></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -18,19 +18,19 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">矢野 昭一朗
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>10月頃お届け</span>
+            <span>10<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">クリーミーな甘さが癖になる「安納芋」</h3>
           </div>
-          <div class="dataSub">1,475<span class="unit">円</span><span class="attn">(税込・送料込)</span>/2<span class="attn">kg</span>前後</div>
+          <div class="dataSub">1,475<span class="unit"><%= t "main.thumb.yen" %></span><span class="attn"><%= t "main.thumb.tax_fee" %></span>/2<span class="attn">kg</span>前後</div>
         </div>
       </a>
       <div class="optionLink">
@@ -48,7 +48,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/033/002_1242x702.jpg" alt="成長の早い夏野菜、肉厚な「万願寺とうがらし」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-03">人気</span>
+            <span class="item-labels-03"><%= t "main.fav" %></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -58,21 +58,21 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">矢野 昭一朗
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>11月頃お届け</span>
+            <span>11<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">成長の早い夏野菜、肉厚な「万願寺とうがらし」</h3>
           </div>
           <div class="dataSub">1,200
-            <span class="unit">円</span>
-            <span class="attn">(税込・送料込)</span>/4袋前後</div>
+            <span class="unit"><%= t "main.thumb.yen" %></span>
+            <span class="attn"><%= t "main.thumb.tax_fee" %></span>/4袋前後</div>
         </div>
       </a>
       <div class="optionLink">
@@ -90,7 +90,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/031/005_1242x702.jpg" alt="トロっとした果肉がたまらない「純白なす」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-03">人気</span>
+            <span class="item-labels-03"><%= t "main.fav" %></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -100,21 +100,21 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">西岡 守
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>8月頃お届け</span>
+            <span>8<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">トロっとした果肉がたまらない「純白なす」</h3>
           </div>
           <div class="dataSub">1,200
-            <span class="unit">円</span>
-            <span class="attn">(税込・送料込)</span>/2袋前後</div>
+            <span class="unit"><%= t "main.thumb.yen" %></span>
+            <span class="attn"><%= t "main.thumb.tax_fee" %></span>/2袋前後</div>
         </div>
       </a>
       <div class="optionLink">
@@ -132,7 +132,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/031/001_1242x702.jpg" alt="農薬・化学肥料不使用で栽培する「なす」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-03">人気</span>
+            <span class="item-labels-03"><%= t "main.fav" %></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -142,21 +142,21 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">西岡 守
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>7～8月頃お届け</span>
+            <span>7～8<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">農薬・化学肥料不使用で栽培する「なす」</h3>
           </div>
           <div class="dataSub">1,300
-            <span class="unit">円</span>
-            <span class="attn">(税込・送料込)</span>/2袋前後</div>
+            <span class="unit"><%= t "main.thumb.yen" %></span>
+            <span class="attn"><%= t "main.thumb.tax_fee" %></span>/2袋前後</div>
         </div>
       </a>
       <div class="optionLink">
