--- a/app/views/pages/_small_pack_new.html.erb
+++ b/app/views/pages/_small_pack_new.html.erb
@@ -8,7 +8,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/003/002_1242x702.jpg" alt="野菜炒めや中華料理に「広東ハクサイ(パクチョイ)」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">最新</span>
+            <span class="item-labels-02"><%= t "main.last"%></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -18,19 +18,19 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">トブシン バヤル
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>8～9月頃お届け</span>
+            <span>8～9<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">野菜炒めや中華料理に「広東ハクサイ(パクチョイ)」</h3>
           </div>
-          <div class="dataSub">1,400<span class="unit">円</span><span class="attn">(税込・送料込)</span>/4袋前後</div>
+          <div class="dataSub">1,400<span class="unit"><%= t "main.thumb.yen" %></span><span class="attn"><%= t "main.thumb.tax_fee" %></span>/4袋前後</div>
         </div>
       </a>
       <div class="optionLink">
@@ -48,7 +48,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/022/001_1242x702.jpg" alt="農薬、化学肥料不使用で育てる「ブロッコリー」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">最新</span>
+            <span class="item-labels-02"><%= t "main.last"%></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -58,19 +58,19 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">阿部 まゆき
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>11月頃お届け</span>
+            <span>11<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">農薬、化学肥料不使用で育てる「ブロッコリー」</h3>
           </div>
-          <div class="dataSub">1,527<span class="unit">円</span><span class="attn">(税込・送料込)</span>/2本前後</div>
+          <div class="dataSub">1,527<span class="unit"><%= t "main.thumb.yen" %></span><span class="attn"><%= t "main.thumb.yen" %></span>/2本前後</div>
         </div>
       </a>
       <div class="optionLink">
@@ -88,7 +88,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/012/002_1242x702.jpg" alt="皮ごと生でポリポリ甘い「ミニニンジン」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">最新</span>
+            <span class="item-labels-02"><%= t "main.last"%></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -98,21 +98,21 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">長坂 知洋
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>8～9月頃お届け</span>
+            <span>8～9<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">皮ごと生でポリポリ甘い「ミニニンジン」</h3>
           </div>
           <div class="dataSub">1,500
-            <span class="unit">円</span>
-            <span class="attn">(税込・送料込)</span>/4袋前後</div>
+            <span class="unit"><%= t "main.thumb.yen" %></span>
+            <span class="attn"><%= t "main.thumb.yen" %></span>/4袋前後</div>
         </div>
       </a>
       <div class="optionLink">
@@ -130,7 +130,7 @@
             <img src="https://agriculture.rakuten.co.jp/farm/assets/crops/img/022/002_1242x702.jpg" alt="ブロッコリー界の王子「スティックセニョール」">
           </div>
           <div class="item-labels">
-            <span class="item-labels-02">最新</span>
+            <span class="item-labels-02"><%= t "main.last"%></span>
           </div>
         </div>
         <div class="item-separate-2">
@@ -140,19 +140,19 @@
             </div>
             <div class="datahead-text">
               <span class="datahead-text-main">徳永 光勇輝
-                <span class="honorific">さん</span>
+                <span class="honorific"><%= t "main.thumb.san" %></span>
               </span>
               <br>
               <span class="datahead-text-sub">愛媛県 テレファーム</span>
             </div>
           </div>
           <div class="tags">
-            <span>11月頃お届け</span>
+            <span>11<%= t "main.thumb.maybe_month" %></span>
           </div>
           <div class="dataMain">
             <h3 class="dataMain-head">ブロッコリー界の王子「スティックセニョール」</h3>
           </div>
-          <div class="dataSub">1,527<span class="unit">円</span><span class="attn">(税込・送料込)</span>/4袋前後</div>
+          <div class="dataSub">1,527<span class="unit"><%= t "main.thumb.yen" %></span><span class="attn"><%= t "main.thumb.yen" %></span>/4袋前後</div>
         </div>
       </a>
       <div class="optionLink">
