--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <%= render "pages/top" %>
 <h2 class="sec-head" id="sc-grp7">
-  <span>投稿一覧</span>
+  <span><%= t "main.list.post" %></span>
 </h2>
-<p class="sec-disc">最新の記事をチェックしましょう。</p>
+<p class="sec-disc"><%= t "main.outline.post" %></p>
 <div class="top-c-articleList">
   <div class="inner">
     <ul class="articlelist-list">
