--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,19 +2,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-sm-6 footerleft ">
-        <div class="logofooter">神様 チーム</div>
-        <p>ベトナム理工系トップクラスのハノイ工科大学と、日本の芝浦工業大学の学生チーム。
-        問題解決学習の一環として、webアプリケーション「favs」の開発を行っています。</p>
-        <p><i class="fa fa-map-pin"></i>1 Đại Cồ Việt, Lê Đại Hành, Hà Nội</p>
-        <p><i class="fa fa-phone"></i> Phone (VN) :  +84-4-3795-5417 </p>
-        <p><i class="fa fa-envelope"></i> E-mail : info@kamisama.com</p>
+        <div class="logofooter"><%= t "team.name" %></div>
+        <p><%= t "layouts.footer.about_kamisama" %></p>
+        <p><i class="fa fa-map-pin"></i><%= t "layouts.footer.map_pin" %></p>
+        <p><i class="fa fa-phone"></i> <%= t "layouts.footer.phone" %> </p>
+        <p><i class="fa fa-envelope"></i><%= t "layouts.footer.mail" %></p>
       </div>
       <div class="col-md-2 col-sm-6 paddingtop-bottom">
-        <h6 class="heading7">LINKS</h6>
+        <h6 class="heading7"><%= t "layouts.footer.link" %></h6>
         <ul class="footer-ul">
-          <li><a href="#"> Career</a></li>
-          <li><a href="#"> Privacy Policy</a></li>
-          <li><a href="#"> Terms & Conditions</a></li>
+          <li><a href="#"><%= t "layouts.footer.career" %></a></li>
+          <li><a href="#"><%= t "layouts.footer.Privacy_Policy" %></a></li>
+          <li><a href="#"><%= t "layouts.footer.Terms_Conditions" %> </a></li>
+          <li><a href="https://www.facebook.com/facebook"><%= t "layouts.footer.facebook" %> </a></li>
         </ul>
       </div>
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
