--- a/app/views/pages/_small_pack_list.html.erb
+++ b/app/views/pages/_small_pack_list.html.erb
@@ -6,17 +6,17 @@
           <%= link_to image_tag("crops_icon"), products_path(@products) %>
         </div>
         <div class="txtWrap list-name">
-          <b>農産物一覧を見る</b>
+          <b><%= t "main.list.product" %><%= t "main.to_watch" %></b>
         </div>
       </a>
-    </li>s
+    </li>
     <li>
       <a href="#">
         <div class="imgWrap">
           <%= link_to image_tag("farmers_icon"), users_path(@users) %>
         </div>
         <div class="txtWrap list-name">
-          <b>農家さん一覧を見る</b>
+          <b><%= t "main.list.farmer" %><%= t "main.to_watch" %></b>
         </div>
       </a>
     </li>
@@ -26,7 +26,7 @@
           <%= link_to image_tag("post_icon"), posts_path(@posts) %>
         </div>
         <div class="txtWrap list-name">
-          <b>投稿一覧を見る</b>
+          <b><%= t "main.list.post" %><%= t "main.to_watch" %></b>
         </div>
       </a>
     </li>
