--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -366,3 +366,28 @@ p {
   padding-top: 10px;
   margin-left: -20px;
 }
+
+#myModal{
+  width: 80%;
+  margin: 3% 10%;
+  z-index: 100;
+  background: white;
+  border: 1px solid black;
+  position:absolute;
+  height: 80%;
+  display: none;
+}
+#myModal .field *{
+  width: 80%;
+  margin:auto 10%;
+}
+#myModal .actions *{
+  margin: 10px 10%;
+}
+
+.cropsMenuList .imgWrap{
+  margin:auto;
+}
+.cropsMenuList .txtWrap.list-name{
+  text-align: center;
+}
