--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t("pages.home") %>
 <% if user_signed_in? %>
-  <%= render "pages/home_page" %>
+  <%= render "pages/home_page", posts: @posts %>
 <% else %>
 	<%= render "pages/top" %>
 	<%= render "pages/small_pack" %>
