--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,6 +15,7 @@
           <li><a href="#"><%= t "layouts.footer.Privacy_Policy" %></a></li>
           <li><a href="#"><%= t "layouts.footer.Terms_Conditions" %> </a></li>
           <li><a href="https://www.facebook.com/facebook"><%= t "layouts.footer.facebook" %> </a></li>
+          <li><a href="https://docs.google.com/forms/d/1LJcEWDZN_Nk5azRGTo6DpCBZ6w8KLTpu510YZnWU8Tw/edit"><%= t "layouts.footer.feed_back" %></a></li>
         </ul>
       </div>
       <div class="col-md-3 col-sm-6 paddingtop-bottom">
@@ -25,9 +26,6 @@
           style="margin-bottom:15px;" data-adapt-container-width="true"
           data-hide-cover="false" data-show-facepile="true">
           <div class="fb-xfbml-parse-ignore">
-            <blockquote cite="https://www.facebook.com/facebook">
-              <a href="https://www.facebook.com/facebook">Facebook</a>
-            </blockquote>
           </div>
         </div>
       </div>
@@ -47,6 +45,7 @@
         <li><a href="#"><%= t "layouts.footer.faq" %></a></li>
         <li><a href="#"><%= t "layouts.footer.contact_us" %></a></li>
         <li><a href="#"><%= t "layouts.footer.sitemap" %></a></li>
+        <li><a href="https://docs.google.com/forms/d/1LJcEWDZN_Nk5azRGTo6DpCBZ6w8KLTpu510YZnWU8Tw/edit"><%= t "layouts.footer.feed_back" %></a></li>
       </ul>
     </div>
   </div>
